Fixted layout bug

--- a/src/client/config.scss
+++ b/src/client/config.scss
@@ -1,5 +1,5 @@
-$fa-font-path: '~/fonts';
-@import '~font-awesome/scss/font-awesome.scss';
+$fa-font-path: '~font-awesome/fonts';
+@import '~font-awesome/scss/font-awesome';
 
 :root {
   --color-background: #e7e7e7;
