--- a/src/client/containers/List/List.scss
+++ b/src/client/containers/List/List.scss
@@ -40,7 +40,8 @@ section {
   position: absolute;
   z-index: 30;
   top: 70px;
-  width: 400px;
+  width: 100%;
+  max-width: 400px;
   min-height: 400px;
   border: 1px solid #cccccc;
   background: #ffffff;
