--- a/src/client/containers/List/ListModal/ListModal.scss
+++ b/src/client/containers/List/ListModal/ListModal.scss
@@ -2,7 +2,8 @@
 
 .list-modal {
   flex-direction: column;
-  width: 400px;
+  width: 100%;
+  max-width: 400px;
 
   .list-modal-header {
     padding: 5px 10px;
